<resources>
    <string name="app_name">Proxy Login</string>
    <string name="proxy_login">Proxy Login</string>
    <string name="iitk_username">IITK Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout_current_session">Logout current session!</string>
    <string name="logout_url">https://gateway.iitk.ac.in:1003/logout?0501030a00253727</string>
    <string name="fortinet_login_url">https://gateway.iitk.ac.in:1003</string>
    <string name="default_ping_url">http://google.com</string>
    <string name="logged_out_message">Your current session is logged out!</string>
    <string name="refresh_now">Refresh Now</string>
    <string name="logout">Logout</string>
    <string name="refresh_current_session">Refreshing current session..</string>
    <string name="no_wifi_found">No wifi connection found!</string>
    <string name="some_error">Some error occurred!</string>
    <string name="logged_in">Logged in!</string>
    <string name="lastLogin">lastLogin</string>
    <string name="check_iitk_url">https://webmail1.iitk.ac.in/squirrelmail/</string>
    <string name="check_iron_port_url">http://authenticate.iitk.ac.in/netaccess/connstatus.html</string>
    <string name="fortinet_keep_alive_url">https://gateway.iitk.ac.in:1003/keepalive?0f0103060f243720</string>
    <string name="use_your_iitk_credentilas">Use your IITK credentilas</string>
    <string name="note_feel_free_to_close_the_app_you_can_access_app_from_notification_tray">NOTE: Feel free to close the app. You can access app from notification tray</string>
    <string name="ironport_url">http://authenticate.iitk.ac.in/netaccess/loginuser.html</string>
</resources>
