<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SessionActivity"
    android:gravity="center"
    android:id="@+id/llBase"
    android:orientation="vertical">

    <ImageView
        style="@style/TopLogo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:id="@+id/primaryText"
        />
    <Button
        style="@style/Button"
        android:text="@string/refresh_now"
        android:id="@+id/refresh"
        android:onClick="onRefreshClick"
        />
    <Button
        style="@style/SecondaryButton"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:onClick="onLogoutClick"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:gravity="center"
        android:text="@string/note_feel_free_to_close_the_app_you_can_access_app_from_notification_tray"
        />
</LinearLayout>
