<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="LoginActivity"
    android:gravity="center_horizontal"
    android:id="@+id/llBase"
    android:orientation="vertical">

    <ImageView
        style="@style/TopLogo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:id="@+id/primaryText"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userNameInput"
        app:errorTextAppearance="@style/error_appearance"
        style="@style/TextInputLayout">
        <EditText
            android:inputType="text"
            android:maxLength="10"
            style="@style/EditText"
            android:hint="@string/iitk_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordInput"
        app:errorTextAppearance="@style/error_appearance"
        style="@style/TextInputLayout">
        <EditText
            android:inputType="textPassword"
            style="@style/EditText"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Button"
        android:text="@string/login"
        android:id="@+id/login"
        android:onClick="onLoginClick"
        />

    <ProgressBar
        style="@style/ProgressBar"
        />

</LinearLayout>
